Fixed issue with Bootstrap cards not collapsing correctly

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,3 +1,4 @@
+
 /* navbar */
 #navbar{  margin: 0;
         padding: 0;
@@ -36,7 +37,7 @@
 }
 /*  i cant get the waffle menu to change to gold for whatever reason */
 
-/*  */
+
 body{
     background-color: #333333;
     color:white; 
@@ -232,11 +233,6 @@ footer a:hover{
 }
 
 /* Bootstrap cards */
-.card {
-  min-width: 400px;
-  max-width: 400px;
-}
-
 .card-title {
   color: black;
 }
@@ -244,12 +240,7 @@ footer a:hover{
 .card-text {
   color: black;
 }
-/* .card-img-top {
-  min-width: 400px;
-  max-width: 400px;
-  min-height: 400px;
-  max-height: 400px;
-} */
+
 
 #SIG_accordion button{
    padding: 1rem; 
